--- a/node/about.html
+++ b/node/about.html
@@ -14,7 +14,7 @@
 <div class="star">★</div>
 <!--star-->
     <meta charset="UTF-8">
-    <title>Wikiperia - ホーム</title>
+    <title>Wikiperia - このサイトって何</title>
 	 <link rel="stylesheet" href="http://wikiperia.yamiagari.ml/css/main.css">
    <link rel="icon" href="http://wikiperia.yamiagari.ml/favicon.ico">
 	<!---menu--->
@@ -38,8 +38,8 @@
   <!---menu--->
 <!--内容-->
 
-<center><big><big>このサイトはXperia専門のwikiです<br>このサイトは作成途中です。<br>XperiaのWikiを作ってるんです(?)</big></center>
-<br><br><br><br><br><br><center>このサイトは、Sonyとは無関係です</center>
+
+<center>工事中</center>
 
 <!--内容-->
 <!--BGM-->
