--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>404</title>
   <link rel='stylesheet' href='css/404min.css'><link rel="stylesheet" href="css/404.css">
-  <meta http-equiv="refresh" content="5; url=index.html">
+  <meta http-equiv="refresh" content="5; url=http://wikiperia.yamiagari.ml/index.html">
 </head>
 <body>
   
