--- a/node/contact.html
+++ b/node/contact.html
@@ -20,7 +20,7 @@
 	<!---menu--->
   <nav>
     <ul id="main">
-      <a href="http://wikiperia.yamiagari.ml/node/index.html"><li>ホーム</li></a>
+      <a href="http://wikiperia.yamiagari.ml/index.html"><li>ホーム</li></a>
       <a href="http://wikiperia.yamiagari.ml/node/about.html"><li>このサイトって何</li></a>
         <li>Xperia
         <ul class="drop">
