--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="ja">
 <html>
   <head>
+	  <!--opt-->
+<meta property="og:url" content="https://wikiperia.yamiagari.ml" />
+<meta property="og:type" content="Wikiperia" />
+<meta property="og:title" content="Wikiperia" />
+<meta property="og:description" content="Wikiperiaは、Xperia専門のwikiサイトです^^" />
+<meta property="og:site_name" content="Wikiperiaは、Sonyとは無関係です" />
+<meta property="og:image" content="https://wikiperia.yamiagari.ml/ftp/imgs/Xperia-X-Conpact.png" />
+	  <!--opt-->
 <!--star-->
 <div class="star">★</div>
 <div class="star">★</div>
